--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
                 width: 80vw;
                 margin-top: 100px;
             }
+
             .hero-image {
-                text-align: center  ;
+                text-align: center;
             }
 
             .hero {
@@ -84,8 +85,8 @@
                 font-size: 3rem;
             }
 
-            .cta-button { 
-                font-size: 1rem;                
+            .cta-button {
+                font-size: 1rem;
             }
 
         }
@@ -101,6 +102,9 @@
             border: 2px solid black;
             z-index: 1;
             margin: 5px;
+            background: rgba(255, 255, 255, 0.5); 
+            backdrop-filter: blur(8px);
+            -webkit-backdrop-filter: blur(8px);
         }
 
         .navbar h1 {
@@ -117,7 +121,8 @@
             <h1>BY BM</h1>
         </div>
         <div>
-            <a style="padding: 5px 10px; font-size: 1.125rem; margin-right: 10px;" href="mailto:kraettrash@gmail.com?subject=3D%20Druck%20Anfrage" class="cta-button">Anfragen</a>
+            <a style="padding: 5px 10px; font-size: 1.125rem; margin-right: 10px;"
+                href="mailto:kraettrash@gmail.com?subject=3D%20Druck%20Anfrage" class="cta-button">Anfragen</a>
         </div>
     </div>
     <section class="hero">
