--- a/index.html
+++ b/index.html
@@ -5,137 +5,111 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3D Printing Business - Beni & Marie</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
     </style>
-    <style>
-        body,
-        html {
-            margin: 0;
-            padding: 0;
-            font-family: 'Inter', sans-serif;
-            background: #fff;
-            color: #000;
-        }
-
-        .hero {
-            display: flex;
-            height: 100vh;
-            width: 100vw;
-            justify-content: space-between;
-            padding: 0 5%;
-            box-sizing: border-box;
-            flex-wrap: wrap;
-        }
-
-        .hero-text {
-            margin-top: auto;
-            margin-bottom: auto;
-            flex: 1;
-            max-width: 600px;
-        }
-
-        .hero-text h1 {
-            font-size: 4rem;
-            line-height: 1.1;
-            margin-bottom: 20px;
-            font-weight: 800;
-        }
-
-        .hero-image {
-            max-width: 500px;
-            flex: 1;
-            margin-top: auto;
-            margin-bottom: auto;
-        }
-
-        .hero-image img {
-            width: 500px;
-            height: auto;
-            border-radius: 10px;
-        }
-
-        .cta-button {
-            display: inline-block;
-            padding: 20px 40px;
-            background: #000;
-            color: #fff;
-            text-decoration: none;
-            font-size: 1.5rem;
-            font-weight: bold;
-            border-radius: 5px;
-        }
-
-        @media (max-width: 1200px) {
-            .hero-image img {
-                width: 80vw;
-                margin-top: 100px;
-            }
-
-            .hero-image {
-                text-align: center;
-            }
-
-            .hero {
-                align-items: center;
-            }
-
-            .hero-text h1 {
-                margin-top: 100px;
-                font-size: 3rem;
-            }
-
-            .cta-button {
-                font-size: 1rem;
-            }
-
-        }
-
-        .navbar {
-            position: fixed;
-            top: 0;
-            right: 5px;
-            left: 5px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            border: 2px solid black;
-            z-index: 1;
-            margin: 5px;
-            background: rgba(255, 255, 255, 0.5); 
-            backdrop-filter: blur(8px);
-            -webkit-backdrop-filter: blur(8px);
-        }
-
-        .navbar h1 {
-            font-family: 'Inter', sans-serif;
-            margin: 5px;
-            font-size: 1.5rem;
-        }
-    </style>
+    <link rel="stylesheet" href="index.css">
+    </div>
 </head>
 
 <body>
     <div class="navbar">
         <div>
-            <h1>BY BM</h1>
+            <h1>BY MB</h1>
         </div>
         <div>
             <a style="padding: 5px 10px; font-size: 1.125rem; margin-right: 10px;"
-                href="mailto:kraettrash@gmail.com?subject=3D%20Druck%20Anfrage" class="cta-button">Anfragen</a>
+                href="mailto:kraettrash@gmail.com?subject=3D%20Druck%20Anfrage" class="btn btn-primary">Anfragen</a>
         </div>
     </div>
-    <section class="hero">
-        <div class="hero-text">
-            <h1>Präziser 3D-Druck aus Leopoldsdorf.</h1>
-            <a href="mailto:kraettrash@gmail.com?subject=3D%20Druck%20Anfrage" class="cta-button">Schreib uns!</a>
+    <div class="pagecontainer">
+
+
+        <section class="hero">
+            <div class="hero-text">
+                <h1>Präziser 3D-Druck aus Leopoldsdorf.</h1>
+                <a href="mailto:kraettrash@gmail.com?subject=3D%20Druck%20Anfrage" class="btn btn-primary"
+                    style="padding: 20px 40px; font-size: x-large;">Schreib uns!</a>
+            </div>
+            <div class="hero-image">
+                <!-- Platzhalter für Bambulab A1 Bild -->
+                <img width="600px" src="https://asset.conrad.com/media10/isa/160267/c1/-/de/003123319PI00/image.jpg"
+                    alt="Bambulab A1">
+            </div>
+        </section>
+
+        <h2>Unsere Projekte</h2>
+
+        <div
+            style="display: flex; align-items: center; justify-content: space-between; width: 100%; flex-wrap: wrap; row-gap: 20px;">
+            <div class="card" style="width: 30rem; border: 2px solid black; border-radius: 0px;">
+                <!-- Carousel Start -->
+                <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./Fotos/Schwein/1.JPG" class="d-block w-100" alt="Glücksschweinchen 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./Fotos/Schwein/2.JPG" class="d-block w-100" alt="Glücksschweinchen 2">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./Fotos/Schwein/3.JPG" class="d-block w-100" alt="Glücksschweinchen 3">
+                        </div>
+                    </div>
+                    <!-- Controls -->
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                        data-bs-validation="false" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true" style="filter: invert(1);"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true" style="filter: invert(1);"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+                <!-- Carousel End -->
+
+                <div class="card-body">
+                    <h5 class="card-title">Glücksschweinchen</h5>
+                    <p class="card-text">Ein kleines Geschenk für unsere Liebsten zu Silvester</p>
+                    <a href="#" class="btn btn-primary" style="border-radius: 0px;">Ansehen</a>
+                </div>
+            </div>
         </div>
-        <div class="hero-image">
-            <!-- Platzhalter für Bambulab A1 Bild -->
-            <img width="600px" src="https://asset.conrad.com/media10/isa/160267/c1/-/de/003123319PI00/image.jpg"
-                alt="Bambulab A1">
+
+        <div class="callToActionWrapper">
+            <div>
+                <h2>Mit einer Nachricht zu deinem persönlichen Angebot!</h2>
+                <p style="max-width: 700px;">Hast du ein besonderes Geschenk im Kopf oder suchst du nach einer praktischen Lösung für deinen
+                    Alltag?
+                    Schreib uns einfach eine unverbindliche Nachricht mit deiner Vorstellung – Wir (Beni und Marie)
+                    beraten
+                    dich persönlich und erstellen dir ein maßgeschneidertes Angebot für dein 3D-Druck-Projekt.</p>
+                <a style="padding: 5px 10px; font-size: 1.125rem; margin-right: 10px;"
+                    href="mailto:kraettrash@gmail.com?subject=3D%20Druck%20Anfrage" class="btn btn-primary">Nachricht
+                    schreiben</a>
+            </div>
+            <video autoplay loop muted playsinline poster="fallback-image.jpg" class="druckenPlayer">
+                <source src="./Fotos/Cropped_Drucken.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
         </div>
-    </section>
+
+    </div>
+        <div class="footer">
+            <div class="pagecontainer">
+                <div style="display: flex; justify-content: space-between;">
+                    <p>Made in Leo by Marie und Beni</p>
+                    <a href="mailto:kraettrash@gmail.com?subject=3D%20Druck%20Anfrage"><p>Anfragen</p></a>
+                </div>
+            </div>
+        </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
 
 </html>
