--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="navbar">
         <div>
-            <h1>BY MB</h1>
+            <h1>BY M<span class="text-small">arie</span>B<span class="text-small">eni</span></h1>
         </div>
         <div>
             <a style="padding: 5px 10px; font-size: 1.125rem; margin-right: 10px;"
