--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
         </section>
 
-        <h2>Unsere Projekte</h2>
+        <h2>Unsere Produkte</h2>
 
         <div
             style="display: flex; align-items: center; justify-content: space-between; width: 100%; flex-wrap: wrap; row-gap: 20px;">
@@ -86,8 +86,8 @@
                 <p style="max-width: 700px;">Hast du ein besonderes Geschenk im Kopf oder suchst du nach einer praktischen Lösung für deinen
                     Alltag?
                     Schreib uns einfach eine unverbindliche Nachricht mit deiner Vorstellung – Wir (Beni und Marie)
-                    beraten
-                    dich persönlich und erstellen dir ein maßgeschneidertes Angebot für dein 3D-Druck-Projekt.</p>
+                    beraten dich persönlich und erstellen dir ein maßgeschneidertes Angebot für dein 3D-Druck-Projekt.</p>
+                    <p>z.B. Ich hätte gerne <b>10</b> von den <b>Glücksschweinchen</b> bis zum <b>10.01</b></p>
                 <a style="padding: 5px 10px; font-size: 1.125rem; margin-right: 10px;"
                     href="mailto:kraettrash@gmail.com?subject=3D%20Druck%20Anfrage" class="btn btn-primary">Nachricht
                     schreiben</a>
