--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div>
             <a style="padding: 5px 10px; font-size: 1.125rem; margin-right: 10px;"
-                href="mailto:kraettrash@gmail.com?subject=3D%20Druck%20Anfrage" class="btn btn-primary">Anfragen</a>
+                href="mailto:bymariebeni@gmail.com?subject=3D%20Druck%20Anfrage" class="btn btn-primary">Anfragen</a>
         </div>
     </div>
     <div class="pagecontainer">
@@ -30,7 +30,7 @@
         <section class="hero">
             <div class="hero-text">
                 <h1>Präziser 3D-Druck aus Leopoldsdorf.</h1>
-                <a href="mailto:kraettrash@gmail.com?subject=3D%20Druck%20Anfrage" class="btn btn-primary"
+                <a href="mailto:bymariebeni@gmail.com?subject=3D%20Druck%20Anfrage" class="btn btn-primary"
                     style="padding: 20px 40px; font-size: x-large;">Schreib uns!</a>
             </div>
             <div class="hero-image">
@@ -89,7 +89,7 @@
                     beraten dich persönlich und erstellen dir ein maßgeschneidertes Angebot für dein 3D-Druck-Projekt.</p>
                     <p>z.B. Ich hätte gerne <b>10</b> von den <b>Glücksschweinchen</b> bis zum <b>10.01</b></p>
                 <a style="padding: 5px 10px; font-size: 1.125rem; margin-right: 10px;"
-                    href="mailto:kraettrash@gmail.com?subject=3D%20Druck%20Anfrage" class="btn btn-primary">Nachricht
+                    href="mailto:bymariebeni@gmail.com?subject=3D%20Druck%20Anfrage" class="btn btn-primary">Nachricht
                     schreiben</a>
             </div>
             <video autoplay loop muted playsinline poster="fallback-image.jpg" class="druckenPlayer">
@@ -103,7 +103,7 @@
             <div class="pagecontainer">
                 <div style="display: flex; justify-content: space-between;">
                     <p>Made in Leo by Marie und Beni</p>
-                    <a href="mailto:kraettrash@gmail.com?subject=3D%20Druck%20Anfrage"><p>Anfragen</p></a>
+                    <a href="mailto:bymariebeni@gmail.com?subject=3D%20Druck%20Anfrage"><p>Anfragen</p></a>
                 </div>
             </div>
         </div>
