--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
         </section>
 
-        <h2>Unsere Produkte</h2>
+        <h2>Unsere Prints</h2>
 
         <div
             style="display: flex; align-items: center; justify-content: space-between; width: 100%; flex-wrap: wrap; row-gap: 20px;">
