--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
 
         <div class="callToActionWrapper">
             <div>
-                <h2>Mit einer Nachricht zu deinem persönlichen Angebot!</h2>
+                <h2>Mit einer Nachricht zu deinem Print!</h2>
                 <p style="max-width: 700px;">Hast du ein besonderes Geschenk im Kopf oder suchst du nach einer praktischen Lösung für deinen
                     Alltag?
                     Schreib uns einfach eine unverbindliche Nachricht mit deiner Vorstellung – Wir (Beni und Marie)
-                    beraten dich persönlich und erstellen dir ein maßgeschneidertes Angebot für dein 3D-Druck-Projekt.</p>
+                    beraten dich persönlich und erstellen dir deinen Print</p>
                     <p>z.B. Ich hätte gerne <b>10</b> von den <b>Glücksschweinchen</b> bis zum <b>10.01</b></p>
                 <a style="padding: 5px 10px; font-size: 1.125rem; margin-right: 10px;"
                     href="mailto:bymariebeni@gmail.com?subject=3D%20Druck%20Anfrage" class="btn btn-primary">Nachricht
