--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
     </style>
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" type="image/png" href="/Fotos/favicon.png">
+    <link rel="icon" type="image/png" href="Fotos/favicon.png">
     </div>
 </head>
 
