--- a/index.html
+++ b/index.html
@@ -44,28 +44,69 @@
         <h2>Unsere Prints</h2>
 
         <div
-            style="display: flex; align-items: center; justify-content: space-between; width: 100%; flex-wrap: wrap; row-gap: 20px;">
+            style="display: flex; align-items: center; justify-content: left; width: 100%; flex-wrap: wrap; gap: 50px;">
+            <!-- Stern -->
             <div class="card" style="width: 30rem; border: 2px solid black; border-radius: 0px;">
                 <!-- Carousel Start -->
-                <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+                <div id="carousel2" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4500">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./Fotos/Schwein/1.JPG" class="d-block w-100" alt="Glücksschweinchen 1">
+                            <img src="./Fotos/Stern/1.jpg" class="d-block w-100" alt="Stern 1">
                         </div>
                         <div class="carousel-item">
-                            <img src="./Fotos/Schwein/2.JPG" class="d-block w-100" alt="Glücksschweinchen 2">
+                            <img src="./Fotos/Stern/2.JPG" class="d-block w-100" alt="Stern 2">
                         </div>
                         <div class="carousel-item">
-                            <img src="./Fotos/Schwein/3.JPG" class="d-block w-100" alt="Glücksschweinchen 3">
+                            <div class="carousel-video-container">
+                                <video autoplay muted loop>
+                                    <source src="./Fotos/Stern/20260104_183523000_iOS.mp4" type="video/mp4">
+                                    Your browser does not support the video tag.
+                                </video>
+                            </div>
                         </div>
                     </div>
                     <!-- Controls -->
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carousel2"
                         data-bs-validation="false" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true" style="filter: invert(1);"></span>
                         <span class="visually-hidden">Previous</span>
                     </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                    <button class="carousel-control-next" type="button" data-bs-target="#carousel2"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true" style="filter: invert(1);"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+                <!-- Carousel End -->
+
+                <div class="card-body">
+                    <h5 class="card-title">Stern Fidget</h5>
+                    <p class="card-text">Eines unserer beliebtesten Fidget Toys</p>
+                    <a href="#" class="btn btn-primary" style="border-radius: 0px;">Ansehen</a>
+                </div>
+            </div>
+            <!-- Schwein -->
+            <div class="card" style="width: 30rem; border: 2px solid black; border-radius: 0px;">
+                <!-- Carousel Start -->
+                <div id="carousel1" class="carousel slide" data-bs-ride="carousel" data-bs-interval="7000">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./Fotos/Schwein/1.jpg" class="d-block w-100" alt="Stern 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./Fotos/Schwein/2.jpg" class="d-block w-100" alt="Stern 2">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./Fotos/Schwein/3.jpg" class="d-block w-100" alt="Stern 2">
+                        </div>
+                    </div>
+                    <!-- Controls -->
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carousel1"
+                        data-bs-validation="false" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true" style="filter: invert(1);"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carousel1"
                         data-bs-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true" style="filter: invert(1);"></span>
                         <span class="visually-hidden">Next</span>
@@ -75,7 +116,133 @@
 
                 <div class="card-body">
                     <h5 class="card-title">Glücksschweinchen</h5>
-                    <p class="card-text">Ein kleines Geschenk für unsere Liebsten zu Silvester</p>
+                    <p class="card-text">Ein Geschenk für unsere liebsten zu Silvester</p>
+                    <a href="#" class="btn btn-primary" style="border-radius: 0px;">Ansehen</a>
+                </div>
+            </div>
+            <!-- Würfel -->
+            <div class="card" style="width: 30rem; border: 2px solid black; border-radius: 0px;">
+                <!-- Carousel Start -->
+                <div id="carousel3" class="carousel slide" data-bs-ride="carousel" data-bs-interval="9500">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./Fotos/Wuerfel/1.jpg" class="d-block w-100" alt="Stern 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./Fotos/Wuerfel/2.jpg" class="d-block w-100" alt="Stern 2">
+                        </div>
+                        <div class="carousel-item">
+                            <div class="carousel-video-container">
+                                <video autoplay muted loop>
+                                    <source src="./Fotos/Wuerfel/20260104_183657000_iOS.mp4" type="video/mp4">
+                                    Your browser does not support the video tag.
+                                </video>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Controls -->
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carousel3"
+                        data-bs-validation="false" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true" style="filter: invert(1);"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carousel3"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true" style="filter: invert(1);"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+                <!-- Carousel End -->
+
+                <div class="card-body">
+                    <h5 class="card-title">Unendlicher Würfel</h5>
+                    <p class="card-text">Der Spielspaß hört nie auf</p>
+                    <a href="#" class="btn btn-primary" style="border-radius: 0px;">Ansehen</a>
+                </div>
+            </div>
+            <!-- Dino -->
+            <div class="card" style="width: 30rem; border: 2px solid black; border-radius: 0px;">
+                <!-- Carousel Start -->
+                <div id="carousel4" class="carousel slide" data-bs-ride="carousel" data-bs-interval="12000">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./Fotos/Dino/1.jpg" class="d-block w-100" alt="Stern 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./Fotos/Dino/2.jpg" class="d-block w-100" alt="Stern 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./Fotos/Dino/3.jpg" class="d-block w-100" alt="Stern 1">
+                        </div>
+                        <div class="carousel-item">
+                            <div class="carousel-video-container">
+                                <video autoplay muted loop>
+                                    <source src="./Fotos/Dino/20260104_183758000_iOS.mp4" type="video/mp4">
+                                    Your browser does not support the video tag.
+                                </video>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Controls -->
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carousel4"
+                        data-bs-validation="false" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true" style="filter: invert(1);"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carousel4"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true" style="filter: invert(1);"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+                <!-- Carousel End -->
+
+                <div class="card-body">
+                    <h5 class="card-title">Unendlicher Würfel</h5>
+                    <p class="card-text">Der Spielspaß hört nie auf</p>
+                    <a href="#" class="btn btn-primary" style="border-radius: 0px;">Ansehen</a>
+                </div>
+            </div>
+            <!-- Cone Fidgt -->
+            <div class="card" style="width: 30rem; border: 2px solid black; border-radius: 0px;">
+                <!-- Carousel Start -->
+                <div id="carousel5" class="carousel slide" data-bs-ride="carousel" data-bs-interval="14500">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./Fotos/Spinning Cone/1.jpg" class="d-block w-100" alt="Stern 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./Fotos/Spinning Cone/2.jpg" class="d-block w-100" alt="Stern 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./Fotos/Spinning Cone/3.jpg" class="d-block w-100" alt="Stern 1">
+                        </div>
+                        <div class="carousel-item">
+                            <div class="carousel-video-container">
+                                <video autoplay muted loop>
+                                    <source src="./Fotos/Spinning Cone/20260104_183931000_iOS.mp4" type="video/mp4">
+                                    Your browser does not support the video tag.
+                                </video>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Controls -->
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carousel5"
+                        data-bs-validation="false" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true" style="filter: invert(1);"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carousel5"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true" style="filter: invert(1);"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+                <!-- Carousel End -->
+
+                <div class="card-body">
+                    <h5 class="card-title">Unendlicher Würfel</h5>
+                    <p class="card-text">Der Spielspaß hört nie auf</p>
                     <a href="#" class="btn btn-primary" style="border-radius: 0px;">Ansehen</a>
                 </div>
             </div>
