--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         </div>
                         <div class="carousel-item">
                             <div class="carousel-video-container">
-                                <video autoplay muted loop>
+                                <video autoplay muted loop playsinline >
                                     <source src="./Fotos/Stern/20260104_183523000_iOS.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
@@ -133,7 +133,7 @@
                         </div>
                         <div class="carousel-item">
                             <div class="carousel-video-container">
-                                <video autoplay muted loop>
+                                <video autoplay muted loop playsinline >
                                     <source src="./Fotos/Wuerfel/20260104_183657000_iOS.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
@@ -176,7 +176,7 @@
                         </div>
                         <div class="carousel-item">
                             <div class="carousel-video-container">
-                                <video autoplay muted loop>
+                                <video autoplay muted loop  playsinline >
                                     <source src="./Fotos/Dino/20260104_183758000_iOS.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
@@ -219,7 +219,7 @@
                         </div>
                         <div class="carousel-item">
                             <div class="carousel-video-container">
-                                <video autoplay muted loop>
+                                <video autoplay muted loop playsinline >
                                     <source src="./Fotos/Spinning Cone/20260104_183931000_iOS.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
