--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
                 <div class="card-body">
                     <h5 class="card-title">Unendlicher Würfel</h5>
-                    <p class="card-text">Der Spielspaß hört nie auf</p>
+                    <p class="card-text">Der Spaß hört nie auf</p>
                     <a href="#" class="btn btn-primary" style="border-radius: 0px;">Ansehen</a>
                 </div>
             </div>
@@ -174,8 +174,8 @@
                 <!-- Carousel End -->
 
                 <div class="card-body">
-                    <h5 class="card-title">Unendlicher Würfel</h5>
-                    <p class="card-text">Der Spielspaß hört nie auf</p>
+                    <h5 class="card-title">Flexi Rex</h5>
+                    <p class="card-text">Ein süßer, beweglicher Dino</p>
                     <a href="#" class="btn btn-primary" style="border-radius: 0px;">Ansehen</a>
                 </div>
             </div>
@@ -209,8 +209,8 @@
                 <!-- Carousel End -->
 
                 <div class="card-body">
-                    <h5 class="card-title">Unendlicher Würfel</h5>
-                    <p class="card-text">Der Spielspaß hört nie auf</p>
+                    <h5 class="card-title">Cone Fidget</h5>
+                    <p class="card-text">Wie passt das da durch??</p>
                     <a href="#" class="btn btn-primary" style="border-radius: 0px;">Ansehen</a>
                 </div>
             </div>
