--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
             <div class="hero-image">
                 <!-- Platzhalter für Bambulab A1 Bild -->
-                <img width="600px" src="https://asset.conrad.com/media10/isa/160267/c1/-/de/003123319PI00/image.jpg"
+                <img width="600px" src="https://asset.conrad.com/media10/isa/160267/c1/-/de/003123319PI00/image.JPG"
                     alt="Bambulab A1">
             </div>
         </section>
@@ -48,10 +48,10 @@
             <!-- Stern -->
             <div class="card" style="width: 30rem; border: 2px solid black; border-radius: 0px;">
                 <!-- Carousel Start -->
-                <div id="carousel2" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4500">
+                <div id="carousel2" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./Fotos/Stern/1.jpg" class="d-block w-100" alt="Stern 1">
+                            <img src="./Fotos/Stern/1.JPG" class="d-block w-100" alt="Stern 1">
                         </div>
                         <div class="carousel-item">
                             <img src="./Fotos/Stern/2.JPG" class="d-block w-100" alt="Stern 2">
@@ -80,16 +80,16 @@
             <!-- Schwein -->
             <div class="card" style="width: 30rem; border: 2px solid black; border-radius: 0px;">
                 <!-- Carousel Start -->
-                <div id="carousel1" class="carousel slide" data-bs-ride="carousel" data-bs-interval="7000">
+                <div id="carousel1" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./Fotos/Schwein/1.jpg" class="d-block w-100" alt="Stern 1">
+                            <img src="./Fotos/Schwein/1.JPG" class="d-block w-100" alt="Stern 1">
                         </div>
                         <div class="carousel-item">
-                            <img src="./Fotos/Schwein/2.jpg" class="d-block w-100" alt="Stern 2">
+                            <img src="./Fotos/Schwein/2.JPG" class="d-block w-100" alt="Stern 2">
                         </div>
                         <div class="carousel-item">
-                            <img src="./Fotos/Schwein/3.jpg" class="d-block w-100" alt="Stern 2">
+                            <img src="./Fotos/Schwein/3.JPG" class="d-block w-100" alt="Stern 2">
                         </div>
                     </div>
                     <!-- Controls -->
@@ -115,13 +115,13 @@
             <!-- Würfel -->
             <div class="card" style="width: 30rem; border: 2px solid black; border-radius: 0px;">
                 <!-- Carousel Start -->
-                <div id="carousel3" class="carousel slide" data-bs-ride="carousel" data-bs-interval="9500">
+                <div id="carousel3" class="carousel slide" data-bs-ride="carousel" data-bs-interval="7000">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./Fotos/Wuerfel/1.jpg" class="d-block w-100" alt="Stern 1">
+                            <img src="./Fotos/Wuerfel/1.JPG" class="d-block w-100" alt="Stern 1">
                         </div>
                         <div class="carousel-item">
-                            <img src="./Fotos/Wuerfel/2.jpg" class="d-block w-100" alt="Stern 2">
+                            <img src="./Fotos/Wuerfel/2.JPG" class="d-block w-100" alt="Stern 2">
                         </div>
                     </div>
                     <!-- Controls -->
@@ -147,16 +147,16 @@
             <!-- Dino -->
             <div class="card" style="width: 30rem; border: 2px solid black; border-radius: 0px;">
                 <!-- Carousel Start -->
-                <div id="carousel4" class="carousel slide" data-bs-ride="carousel" data-bs-interval="12000">
+                <div id="carousel4" class="carousel slide" data-bs-ride="carousel" data-bs-interval="9000">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./Fotos/Dino/1.jpg" class="d-block w-100" alt="Stern 1">
+                            <img src="./Fotos/Dino/1.JPG" class="d-block w-100" alt="Stern 1">
                         </div>
                         <div class="carousel-item">
-                            <img src="./Fotos/Dino/2.jpg" class="d-block w-100" alt="Stern 1">
+                            <img src="./Fotos/Dino/2.JPG" class="d-block w-100" alt="Stern 1">
                         </div>
                         <div class="carousel-item">
-                            <img src="./Fotos/Dino/3.jpg" class="d-block w-100" alt="Stern 1">
+                            <img src="./Fotos/Dino/3.JPG" class="d-block w-100" alt="Stern 1">
                         </div>
                     </div>
                     <!-- Controls -->
@@ -182,16 +182,16 @@
             <!-- Cone Fidgt -->
             <div class="card" style="width: 30rem; border: 2px solid black; border-radius: 0px;">
                 <!-- Carousel Start -->
-                <div id="carousel5" class="carousel slide" data-bs-ride="carousel" data-bs-interval="14500">
+                <div id="carousel5" class="carousel slide" data-bs-ride="carousel" data-bs-interval="11000">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./Fotos/Spinning Cone/1.jpg" class="d-block w-100" alt="Stern 1">
+                            <img src="./Fotos/Spinning Cone/1.JPG" class="d-block w-100" alt="Stern 1">
                         </div>
                         <div class="carousel-item">
-                            <img src="./Fotos/Spinning Cone/2.jpg" class="d-block w-100" alt="Stern 1">
+                            <img src="./Fotos/Spinning Cone/2.JPG" class="d-block w-100" alt="Stern 1">
                         </div>
                         <div class="carousel-item">
-                            <img src="./Fotos/Spinning Cone/3.jpg" class="d-block w-100" alt="Stern 1">
+                            <img src="./Fotos/Spinning Cone/3.JPG" class="d-block w-100" alt="Stern 1">
                         </div>
                     </div>
                     <!-- Controls -->
@@ -228,7 +228,7 @@
                     href="mailto:bymariebeni@gmail.com?subject=3D%20Druck%20Anfrage" class="btn btn-primary">Nachricht
                     schreiben</a>
             </div>
-            <video autoplay loop muted playsinline poster="fallback-image.jpg" class="druckenPlayer">
+            <video autoplay loop muted playsinline poster="fallback-image.JPG" class="druckenPlayer">
                 <source src="./Fotos/Cropped_Drucken.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
