--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                 <div id="carousel2" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./Fotos/Stern/1.JPG" class="d-block w-100" alt="Stern 1">
+                            <img src="./Fotos/Stern/1.jpg" class="d-block w-100" alt="Stern 1">
                         </div>
                         <div class="carousel-item">
-                            <img src="./Fotos/Stern/2.JPG" class="d-block w-100" alt="Stern 2">
+                            <img src="./Fotos/Stern/2.jpg" class="d-block w-100" alt="Stern 2">
                         </div>
                     </div>
                     <!-- Controls -->
@@ -119,10 +119,10 @@
                 <div id="carousel3" class="carousel slide" data-bs-ride="carousel" data-bs-interval="7000">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./Fotos/Wuerfel/1.JPG" class="d-block w-100" alt="Stern 1">
+                            <img src="./Fotos/Wuerfel/1.jpg" class="d-block w-100" alt="Stern 1">
                         </div>
                         <div class="carousel-item">
-                            <img src="./Fotos/Wuerfel/2.JPG" class="d-block w-100" alt="Stern 2">
+                            <img src="./Fotos/Wuerfel/2.jpg" class="d-block w-100" alt="Stern 2">
                         </div>
                     </div>
                     <!-- Controls -->
@@ -151,13 +151,13 @@
                 <div id="carousel4" class="carousel slide" data-bs-ride="carousel" data-bs-interval="9000">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./Fotos/Dino/1.JPG" class="d-block w-100" alt="Stern 1">
+                            <img src="./Fotos/Dino/1.jpg" class="d-block w-100" alt="Stern 1">
                         </div>
                         <div class="carousel-item">
-                            <img src="./Fotos/Dino/2.JPG" class="d-block w-100" alt="Stern 1">
+                            <img src="./Fotos/Dino/2.jpg" class="d-block w-100" alt="Stern 1">
                         </div>
                         <div class="carousel-item">
-                            <img src="./Fotos/Dino/3.JPG" class="d-block w-100" alt="Stern 1">
+                            <img src="./Fotos/Dino/3.jpg" class="d-block w-100" alt="Stern 1">
                         </div>
                     </div>
                     <!-- Controls -->
@@ -186,13 +186,13 @@
                 <div id="carousel5" class="carousel slide" data-bs-ride="carousel" data-bs-interval="11000">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./Fotos/Spinning Cone/1.JPG" class="d-block w-100" alt="Stern 1">
+                            <img src="./Fotos/Spinning Cone/1.jpg" class="d-block w-100" alt="Stern 1">
                         </div>
                         <div class="carousel-item">
-                            <img src="./Fotos/Spinning Cone/2.JPG" class="d-block w-100" alt="Stern 1">
+                            <img src="./Fotos/Spinning Cone/2.jpg" class="d-block w-100" alt="Stern 1">
                         </div>
                         <div class="carousel-item">
-                            <img src="./Fotos/Spinning Cone/3.JPG" class="d-block w-100" alt="Stern 1">
+                            <img src="./Fotos/Spinning Cone/3.jpg" class="d-block w-100" alt="Stern 1">
                         </div>
                     </div>
                     <!-- Controls -->
